@@ -38,7 +38,7 @@ getOAuth <- function() {
 ## mechanisms to page
 twFromJSON = function(json) {
   #twitter sends data in UTF-8, paranoidly confirm encoding
-  json<-iconv(json, "", "UTF-8", sub="")
+  json = iconv(json, "", "UTF-8", sub="")
   ## Will provide some basic error checking, as well as suppress
   ## warnings that always seem to come out of fromJSON, even
   ## in good cases. 
